test/types/range/cast-assign-init/illegal-inits.3-1.good
illegal-inits.chpl:8: error: initializing a range with idxType uint(8) from a range with idxType color
